2013-02-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.10

	* man/Bond.Rd: Use a flat discount curve in example
	* man/DiscountCurve.Rd: Idem
	* man/FixedRateBond.Rd: Idem
	* man/FLoatingRateBond.Rd: Idem
	* man/ZeroCouponBond.Rd: Idem

	* R/arrays.R (plotOptionSurface): Use explicit `rgl::' prefix for all
	function from the rgl package to suppress spurious codetools warning

	* demo/OptionSurfaces.R: Reindented

	* cleanup: Simplified and updated

2012-12-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/discount.cpp (DiscountCurve): R-devel on Windows now longer
	likes a data.frame instantiation here, so passing back as list and ...
	* R/discount.R (DiscountCurve.default): ... making it a data.frame here.

2012-12-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.9

	* src/vanilla.cpp (AmericanOption): Support engine choice, adding
	"CrankNicolson" to the default "BaroneAdesiWhaley" as the former adds
	delta + gamma -- thanks to Bryan Lewis for the suggestion
	* R/option.R: Support new the new 'engine' option
	* man/AmericanOption.Rd: Document new 'engine' option

	* src/bonds.cpp: Remove remaining std::cout use
	* src/curve.cpp: Idem
	* src/zero.cpp: Idem

2011-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars.win: Add -I"$(BOOSTLIB)" which is what other CRAN
	packages depending on Boost do

2011-09-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.8

2011-09-10  Dirk Eddelbuettel  <edd@debian.org>

	* R/dayCounter.R: Added new function 'setEvaluationDate' as a simple
	pass-through function to set a date as the QuantLib evaluation date
	* src/daycounter.cpp: C++ part of setEvaluationDate()
	* man/Calendars.Rd: Documentation for setEvaluationDate()

2011-09-09  Dirk Eddelbuettel  <edd@debian.org>

	* src/discount.cpp (DiscountCurve): Cache the (global) value of
	  QuantLib::Settings::instance().evaluationDate() and reset it at end,
	  with thanks to Helmut Heiming for the bug report.
