@@ -1,2 +1,2 @@
-PKG_CXXFLAGS=@CXXFLAGS@ -I.
+PKG_CXXFLAGS=@CXXFLAGS@ -I../inst/include -I.
 PKG_LIBS=@LDFLAGS@ 
